--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "author": "",
+  "author": "Ivan Ching, Anthony Jin, Ian Porada, Jake Israel",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
