Updates dependencies to include passport and adds base gitignore
Adds passport passport dependencies to package.json and adds node_modules to gitignore

--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "author": "Ivan Ching, Anthony Jin, Ian Porada, Jake Israel",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.2",
     "mongodb": "^2.1.18",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
